force-app/main/default/objects/Account/fields/CasesThroughEmail__c.field-meta.xml
<CustomField>
    <fullName>CasesThroughEmail__c</fullName>
    <label>Cases Through Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>