force-app/main/default/objects/Account/fields/CasesThroughPhone__c.field-meta.xml
<CustomField>
    <fullName>CasesThroughPhone__c</fullName>
    <label>Cases Through Phone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>