force-app/main/default/objects/Account/fields/CasesThroughWeb__c.field-meta.xml
<CustomField>
    <fullName>CasesThroughWeb__c</fullName>
    <label>Cases Through Web</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>