force-app/main/default/objects/Account/fields/Important__c.field-meta.xml
<CustomField>
    <fullName>Important__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Important</label>
    <type>Checkbox</type>
</CustomField>