force-app/main/default/objects/Account/fields/MaxSalary__c.field-meta.xml
<CustomField>
    <fullName>MaxSalary__c</fullName>
    <label>Max Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>