force-app/main/default/objects/Account/fields/TotalOpps__c.field-meta.xml
<CustomField>
    <fullName>TotalOpps__c</fullName>
    <label>Total Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>