force-app/main/default/objects/Account/fields/TotalSalary__c.field-meta.xml
<CustomField>
    <fullName>TotalSalary__c</fullName>
    <label>Total Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>