force-app/main/default/objects/Account/validationRules/Annual_Revenue_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Revenue_is_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(AnnualRevenue)</errorConditionFormula>
    <errorMessage>Please populate Annual Revenue before  you save the record!</errorMessage>
</ValidationRule>